update-manager (1:0.59.22) feisty-updates; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - fix free space check when the dir checked is a symlink
      (LP#106804)
  * cdromupgrade:
    - do not call any authentication mechanism, that is the
      responsibility of the user (LP#107431)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix a bug in the cdrom progress (LP#107451)
  * DistUpgrade/DistUpgradeViewText.py:
    - send correct package failure information to log (LP#109209)
  * DistUpgrade/crashdialog.ui
    - Fix bug report URL in crash dialogue (LP#108969)
  * UpdateManager/Core/MetaRelease.py:
    - fix in I-M-S 304 handling (LP#109216)
  * DistUpgrade/DistUpgradeCache.py:
    - check RemovalBlacklist early when removing a package to
      work-around crash in problem resolver (LP#109014)

 -- 

update-manager (1:0.59.21) feisty-proposed; urgency=low

  * UpdateManager/Core/MetaRelease.py:
    - send pragma: no-cache (LP#107716)
    - fix bug in time representation for i-m-s (LP#107716)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 20 Apr 2007 10:43:08 +0200

update-manager (1:0.59.20) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - do not crash in utf8() if the str is already unicode 
      (LP#106863)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 16 Apr 2007 19:07:04 +0200

update-manager (1:0.59.19) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - disable apt-listchanges in the kde frontend too
    - fix broken terminal interaction (LP#106367)
    - ensure that there is only a single konsole widget 
      visible (LP#106541)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 14 Apr 2007 23:27:48 +0200

update-manager (1:0.59.18) feisty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix i18n initialization (LP#106221)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix encoding in dialog_error (LP#106221)
